infrastructure/kubernetes/manifests/mlflow/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: mlflow-ingress
  namespace: mlflow
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-forward-auth
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: mlflow.muwazana.com
      http:
        paths:
          - backend:
              serviceName: mlflow
              servicePort: 80

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: mlflow-ingress-basic-auth
  namespace: mlflow
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: mlflow-basic-auth
spec:
  rules:
    - host: mlflow-api.muwazana.com
      http:
        paths:
          - backend:
              serviceName: mlflow
              servicePort: 80
